--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ max-line-length = 88
 good-names = ['i', 'j', 'k', 'x', 'y']
 
 [tool.pytest.ini_options]
+pythonpath = ["src/"]
 testpaths = ["tests"]
 addopts = ['--strict-markers']
 
